--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@
 
 services:
   # Servicio de mySQL
-  db:
+  database_auth:
     image: mysql:8.0
-    container_name: mysql_db
+    container_name: database-auth
     ports:
       - "3307:3306"
     environment:
@@ -18,14 +18,14 @@ services:
       - microservices-network
 
   # Servicio de la API REST
-  auth-app:
+  auth_app:
     image: api_rest
     container_name: auth-app
     build:
       context: ./retos2-mejorado
       dockerfile: Dockerfile
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/authentication_db
+      SPRING_DATASOURCE_URL: jdbc:mysql://database_auth:3306/authentication_db
       SPRING_DATASOURCE_USERNAME: auth_user
       SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
       JWT_SECRET: ${JWT_SECRET}
@@ -36,23 +36,25 @@ services:
       SPRING_MAIL_USERNAME: sebas17rr@gmail.com
       SPRING_MAIL_PASSWORD: ${SPRING_MAIL_PASSWORD}
     depends_on:
-      - db
+      - database_auth
     ports:
       - "80:80"
     networks:
       - microservices-network
 
-  log-app:
+  log_app:
+    container_name: log-app
     build:
       context: ./Microservice-Logs
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
     environment:
-      MONGO_URI: "mongodb://mongo:27018/logServiceDB"
-      RABBITMQ_URI: "amqp://rabbitmq:rabbitmq@rabbitmq:5672/"
+      MONGO_URI: "mongodb://database_log:27017/logServiceDB"
+      RABBITMQ_URI: "amqp://rabbitmq:rabbitmq@rabbitmq:5672"
+      QUEUE_LOG: "queueCreateLog"
     depends_on:
-      - mongo-db
+      - database_log
       - rabbitmq
     volumes:
       - ./Microservice-Logs:/usr/src/app # Mapeo del proyecto
@@ -61,7 +63,7 @@ services:
     networks:
       - microservices-network
 
-  mongo-db:
+  database_log:
     image: mongo:5.0
     ports:
       - "27017:27017"
@@ -71,15 +73,26 @@ services:
       - microservices-network
 
   rabbitmq:
+    container_name: rabbitmq
     image: rabbitmq:3-management
     ports:
       - "5672:5672"  
       - "15672:15672" 
+      - "15675:15675"
     environment:
       RABBITMQ_DEFAULT_USER: rabbitmq
       RABBITMQ_DEFAULT_PASS: rabbitmq
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
+      - ./rabbitmq/enabled_plugins:/etc/rabbitmq/enabled_plugins
+      - ./rabbitmq/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
     networks:
       - microservices-network
+    healthcheck:
+      test: ["CMD", "rabbitmqctl", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 networks:
   microservices-network:
@@ -89,3 +102,5 @@ volumes:
   db_data:
   mongo-data:
     driver: local
+  rabbitmq_data:
+
