Implement logging functionality with RabbitMQ integration and update queue name

--- a/retos2-mejorado/src/main/resources/application.properties
+++ b/retos2-mejorado/src/main/resources/application.properties
@@ -28,4 +28,13 @@ jwt.secret=secretTokenUsersUniquindioStivenAndres
 jwt.expiration=3600000
 app.recovery-link-base-url=https://api
 
+spring.rabbitmq.host=${SPRING_RABBITMQ_HOST:rabbitmq}
+spring.rabbitmq.port=${SPRING_RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${SPRING_RABBITMQ_USERNAME:guest}
+spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD:guest}
+spring.rabbitmq.listener.simple.concurrency=3
+spring.rabbitmq.listener.simple.max-concurrency=10
+
+
+
 
