--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,10 @@ services:
       SPRING_MAIL_PORT: 587
       SPRING_MAIL_USERNAME: sebas17rr@gmail.com
       SPRING_MAIL_PASSWORD: ${SPRING_MAIL_PASSWORD}
+      SPRING_RABBITMQ_HOST: rabbitmq
+      SPRING_RABBITMQ_PORT: 5672
+      SPRING_RABBITMQ_USERNAME: rabbitmq
+      SPRING_RABBITMQ_PASSWORD: rabbitmq
     depends_on:
       - database_auth
     ports:
@@ -52,7 +56,7 @@ services:
     environment:
       MONGO_URI: "mongodb://database_log:27017/logServiceDB"
       RABBITMQ_URI: "amqp://rabbitmq:rabbitmq@rabbitmq:5672"
-      QUEUE_LOG: "queueCreateLog"
+      QUEUE_LOG: "CreateLogQueue"
     depends_on:
       - database_log
       - rabbitmq
