--- a/retos2-mejorado/pom.xml
+++ b/retos2-mejorado/pom.xml
@@ -144,6 +144,10 @@
 			<version>5.4.0</version> <!-- Actualizado a versión compatible -->
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
 
 	</dependencies>
 
