--- a/Microservice-Logs/package.json
+++ b/Microservice-Logs/package.json
@@ -18,6 +18,7 @@
     "amqplib": "^0.10.4",
     "body-parser": "^1.20.3",
     "express": "^4.21.1",
+    "moment": "^2.30.1",
     "mongoose": "^8.7.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
