--- a/retos2-mejorado/src/main/resources/application.properties
+++ b/retos2-mejorado/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #opcional
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+app.version=1.0.0
 spring.application.name=api_rest
 server.port=80
 server.error.whitelabel.enabled=false
