--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "server": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +13,12 @@
   "dependencies": {
     "@sendgrid/mail": "^8.1.4",
     "amqplib": "^0.10.4",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.1"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
