--- a/retos2-mejorado/src/main/resources/application.properties
+++ b/retos2-mejorado/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #opcional
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+app.version=1.0.0
 spring.application.name=api_rest
 server.port=80
 server.error.whitelabel.enabled=false
@@ -9,8 +9,10 @@ springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
 
-#spring.datasource.url=jdbc:mysql://localhost:3307/authentication_db #cuando se corre en local
-spring.datasource.url=jdbc:mysql://mysql_db:3306/authentication_db
+#cuando se corre en local
+spring.datasource.url=jdbc:mysql://localhost:3307/authentication_db
+#para jenkins
+#spring.datasource.url=jdbc:mysql://database_auth:3306/authentication_db
 spring.datasource.username=auth_user
 spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
